# chat

./: LICENSE.md  README.md  dialogue.txt
client/: Cargo.toml
client/src/: builder.rs  client.rs  event_bus.rs  input_handler.rs  input_reader.rs  input_shared.rs  lib.rs  main.rs  peer.rs  peer_client.rs  peer_client_builder.rs  peer_client_reader.rs  peer_client_reader_writer.rs  peer_client_writer.rs  peer_director.rs  peer_reader_writer.rs  peer_server.rs  peer_server_handler.rs  peer_server_request_handler.rs  peer_set.rs  peer_types.rs  types.rs
client/src/peer/: client.rs  client_reader.rs  client_writer.rs  director.rs  mod.rs  server.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
server/: Cargo.toml
server/src/: channel.rs  client_handler.rs  client_reader.rs  delivery.rs  lib.rs  listener.rs  main.rs  names.rs  request_handler.rs  server.rs  server_channel.rs  server_listener.rs  server_types.rs  types.rs
