[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.3.0"
futures = "0.3.25"
tokio = { version = "1.24.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1.11"
tracing = "0.1"
tracing-subscriber = "0.3"
protocol = { path = "../protocol" }
